log
Thu 07 Sep 2023 06:57:48 PM UTC: 
 tests:  0|6
total_score: 0/70
5296214
Thu 07 Sep 2023 07:12:44 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:21: error: ‘Node’ undeclared (first use in this function)
   60 |     map->buckets = (Node **)malloc(sizeof(Node *) * capacity);
      |                     ^~~~
hashmap.c:60:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:28: error: expected expression before ‘)’ token
   60 |     map->buckets = (Node **)malloc(sizeof(Node *) * capacity);
      |                            ^
Compilation failed
d2227ce
Thu 07 Sep 2023 07:14:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
dca32b3
Thu 07 Sep 2023 07:15:58 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
daa5726
Thu 07 Sep 2023 07:28:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:19: error: unused variable ‘index’ [-Werror=unused-variable]
   43 |     unsigned long index = hash(key,map->capacity);
      |                   ^~~~~
cc1: all warnings being treated as errors
Compilation failed
b02d803
Thu 07 Sep 2023 07:41:57 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:71: error: comparison between pointer and integer [-Werror]
   44 |     if (map->buckets[position] == NULL || map->buckets[position]->key == -1){
      |                                                                       ^~
hashmap.c:45:15: error: unused variable ‘newPair’ [-Werror=unused-variable]
   45 |         Pair *newPair = createPair(key,value);
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6522f00
